# crm-courier

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  templating.py
app/models/: __init__.py  client.py  courier_cash_handover.py  enums.py  log.py  order.py  payment.py  user.py
app/routers/: accounting.py  archive.py  auth.py  clients.py  couriers.py  orders.py  pages.py  payments.py  users.py
app/services/: accounting_service.py  client_service.py  courier_cash_handover_service.py  courier_service.py  order_service.py  payment_service.py  user_service.py
app/static/css/: app.css
app/templates/: base.html  courier.html  dashboard.html  index.html
app/templates/accounting/: handovers.html  list.html
app/templates/archive/: list.html
app/templates/auth/: login.html
app/templates/clients/: detail.html  form.html  list.html
app/templates/couriers/: _route_screen.html  dashboard.html  list.html  order.html
app/templates/errors/: 403.html
app/templates/orders/: detail.html  form.html  list.html
app/templates/payments/: list.html
app/templates/users/: form.html  list.html
app/utils/: auth.py  dates.py  seed_admin.py  seed_demo.py
tests/: test_accounting_service.py  test_client_service.py  test_courier_cash_handover_service.py  test_courier_service.py  test_demo_mode.py  test_deployment_startup.py  test_order_service.py  test_page_access.py  test_payment_service.py  test_seed_demo.py  test_sqlite_profile.py  test_templating.py  test_user_service.py
